ButtonGroup::buttons: avoid losing the checked button on re-assignment

Task-number: QTBUG-52358
Change-Id: I405947215cdbc6e99fe02dbc85e31c40656fc11a
Reviewed-by: Mitch Curtis <mitch.curtis@theqtcompany.com>